--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
         }
         th, td {
             border: 1px solid black; /* Adiciona bordas nas células */
-            padding: 8px; /* Adiciona espaçamento interno nas células */
+            padding-left: 6px !important; /* Adiciona espaçamento interno nas células */
+            padding-right: 6px !important; /* Adiciona espaçamento interno nas células */
             text-align: left; /* Alinha o texto à esquerda */
         }
         th {
