--- a/app.service/public/index.html
+++ b/app.service/public/index.html
@@ -1,231 +1,51 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google" content="notranslate">
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <title>Skill - Estoque</title>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mudança de Hospedagem</title>
     <style>
-
-        table {
-            width: 100%; /* A tabela vai ocupar 100% da largura */
-            border-collapse: collapse; /* Remove espaçamento entre as células */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 50px;
         }
-        th, td {
-            border: 1px solid black; /* Adiciona bordas nas células */
-            padding-left: 6px !important; /* Adiciona espaçamento interno nas células */
-            padding-right: 6px !important; /* Adiciona espaçamento interno nas células */
-            text-align: left; /* Alinha o texto à esquerda */
-        }
-        th {
-            background-color: #f2f2f2; /* Cor de fundo para o cabeçalho */
-        }
-
-        .rdt_TableRow .hidden {
-            opacity: 0;
-        }
-
-        .rdt_TableRow:hover .hidden {
-            opacity: 1;
-        }
-
-        .rdt_TableRow .hover-blue {
-            background-color: #F4F4F4;
-        }
-
-        .rdt_TableRow:hover .hover-blue {
-            background-color: #2196f3;
-            color: #fff;
-        }
-
-        /* Works on Firefox */
-        * {
-            scrollbar-color: #F4F4F4;
-        }
-
-        /* Works on Chrome, Edge, and Safari */
-        *::-webkit-scrollbar {
-            width: 6px;
-            background: #F4F4F4;
-        }
-
-        *::-webkit-scrollbar-track {
-            background-color: #F4F4F4;
-        }
-
-        *::-webkit-scrollbar-thumb {
-            background: #dad7d7;
-        }
-      
-        fieldset {
-            margin-bottom: 1em !important;
-            border: solid 1px rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.1);
-            padding: 12px !important;
-        }
-
-        legend {
-            float: none;
-            width: auto;
-        }
-      
-        .rs-auto-complete .rs-input::placeholder {
-            color: black;
-        }
-
-        .form-control {
-            padding: 2px 5px;
-        }
-
-        .textfield-filled {
-            width: 100%;
-            position: relative;
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             display: inline-block;
-            font-size: 14px;
-            line-height: 1.5;
-            overflow: hidden;
         }
-
-        /* Input, Select, Textarea */
-        .textfield-filled > input,
-        .textfield-filled > select,
-        .textfield-filled > textarea {
-            display: block;
-            box-sizing: border-box;
-            margin: 0;
-            border: none;
-            border-top: solid 1px transparent;
-            border: solid 1px rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.1);
-            border-radius: 4px 4px 2px 2px;
-            padding: 22px 12px 4px;
-            width: 100%;
-            height: inherit;
-            color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.87);
-            background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.04);
-            box-shadow: none; /* Firefox */
-            font-size: inherit;
-            line-height: inherit;
-            caret-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
-            transition: border-bottom 0.2s, background-color 0.2s;
+        h1 {
+            color: #333;
         }
-
-        /* Span */
-        .textfield-filled > input + span,
-        .textfield-filled > select + span,
-        .textfield-filled > textarea + span {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            display: block;
-            box-sizing: border-box;
-            padding: 2px 12px 0;
-            color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.6);
-            font-size: 75%;
-            line-height: 18px;
-            pointer-events: none;
-            transition: color 0.2s, font-size 0.2s, line-height 0.2s;
+        p {
+            font-size: 18px;
+            color: #666;
         }
-
-        /* Underline */
-        .textfield-filled > input + span::after,
-        .textfield-filled > select + span::after,
-        .textfield-filled > textarea + span::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            display: block;
-            width: 100%;
-            height: 2px;
-            background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
-            transform-origin: bottom center;
-            transform: scaleX(0);
-            transition: transform 0.3s;
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s;
         }
-
-        /* Hover */
-        .textfield-filled > input:hover,
-        .textfield-filled > select:hover,
-        .textfield-filled > textarea:hover {
-            border-bottom-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.87);
-            background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.08);
-        }
-
-        /* Placeholder-shown */
-        /*
-        .textfield-filled > input:not(:focus):placeholder-shown + span,
-        .textfield-filled > textarea:not(:focus):placeholder-shown + span {
-            font-size: inherit;
-            line-height: 48px;
-        }
-        */
-
-        /* Focus */
-        .textfield-filled > input:focus,
-        .textfield-filled > select:focus,
-        .textfield-filled > textarea:focus {
-            outline: none;
-        }
-
-        .textfield-filled > input:focus + span,
-        .textfield-filled > select:focus + span,
-        .textfield-filled > textarea:focus + span {
-            color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
-        }
-
-        .textfield-filled > input:focus + span::before,
-        .textfield-filled > select:focus + span::before,
-        .textfield-filled > textarea:focus + span::before {
-            opacity: 0.12;
-        }
-
-        .textfield-filled > input:focus + span::after,
-        .textfield-filled > select:focus + span::after,
-        .textfield-filled > textarea:focus + span::after {
-            transform: scale(1);
-        }
-
-        /* Disabled */
-        .textfield-filled > input:disabled,
-        .textfield-filled > select:disabled,
-        .textfield-filled > textarea:disabled {
-            border-bottom-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
-            color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
-            background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.24);
-        }
-
-        .textfield-filled > input:disabled + span,
-        .textfield-filled > select:disabled + span,
-        .textfield-filled > textarea:disabled + span {
-            color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
-        }
-
-        /* Faster transition in Safari for less noticable fractional font-size issue */
-        @media not all and (min-resolution:.001dpcm) {
-            @supports (-webkit-appearance:none) {
-                .textfield-filled > input,
-                .textfield-filled > input + span,
-                .textfield-filled > input + span::after,
-                .textfield-filled > select,
-                .textfield-filled > select + span,
-                .textfield-filled > select + span::after,
-                .textfield-filled > textarea,
-                .textfield-filled > textarea + span,
-                .textfield-filled > textarea + span::after {
-                    transition-duration: 0.1s;
-                }
-            }
+        .button:hover {
+            background-color: #0056b3;
         }
     </style>
-    <script type="module" crossorigin src="/assets/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index.css">
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+</head>
+<body>
+    <div class="container">
+        <h1>Atualização de Hospedagem</h1>
+        <p>Informamos que nosso site foi movido para um novo endereço. <br> Clique no botão abaixo para acessar a nova página.</p>
+        <a href="http://vps53636.publiccloud.com.br:1000/" class="button">Acessar Novo Site</a>
+    </div>
+</body>
 </html>
