--- a/app.service/public/index.html
+++ b/app.service/public/index.html
@@ -44,7 +44,7 @@
 <body>
     <div class="container">
         <h1>Atualização de Hospedagem</h1>
-        <p>Informamos que nosso site foi movido para um novo endereço. <br> Clique no botão abaixo para acessar a nova página.</p>
+        <p>Informamos que nosso site foi movido para um novo endereço. <br>Copie o link abaixo para acessar a nova página.</p>
         <p style="color: #007BFF;">http://vps53636.publiccloud.com.br:1000</p>
     </div>
 </body>
