--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,8 @@
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Skill - Estoque</title>
+    <title>Gastrobar - Estoque</title>
     <style>
-
         table {
             width: 100%; /* A tabela vai ocupar 100% da largura */
             border-collapse: collapse; /* Remove espaçamento entre as células */
