--- a/app.service/public/index.html
+++ b/app.service/public/index.html
@@ -24,6 +24,16 @@
             background-color: #f2f2f2; /* Cor de fundo para o cabeçalho */
         }
 
+         /* Remove o padding das células de dados */
+         .rdt_TableCell {
+            padding: 4px !important;
+        }
+
+        /* Remove o padding das colunas do cabeçalho */
+        .rdt_TableCol {
+            padding: 4px !important;
+        }
+
         .rdt_TableRow .hidden {
             opacity: 0;
         }
